[package]
name = "psmsmerge"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.5.4", features = ["derive"] }
env_logger = "0.11.3"
image = "0.25.1"
log = "0.4.21"
memmap = "0.7.0"
rayon = "1.10.0"
